# CCNx_Distillery

./: .gitignore  LICENSE  Makefile  README.md
config/: MasterIDE-CMakeLists.txt  README  config.mk
config/modules/: 000-distillery-update.mk  000-gitModule.mk  000-modules.mk  001-cmake-module.mk  001-make-module.mk  001-modules.mk  002-cmake-modules.mk  100-distillery.mk  110-longbow.mk  120-libparc.mk  210-libccnx-common.mk  220-libccnx-transport-rta.mk  230-libccnx-portal.mk  510-Metis.mk  511-Athena.mk  601-ccnxPing.mk  602-ccnxSimpleFileTransfer.mk  603-ccnxFileRepo.mk  701-MasterIDE.mk  900-sanity.mk  README
dependencies/: .gitignore  Makefile  Makefile.downloader  Makefile.jekyll  Makefile.ubuntu  Makefile.unix  ubuntu-check-packages.sh  ubuntu-check-system.sh  ubuntu-install-packages.sh  ubuntu-packages.list
dependencies/patches/: openssl.patch
src/: CMakeLists.txt
tools/: .gitignore  getStatus.sh  syncOriginMasterWithPARCUpstream.sh  syncWithMaster.sh
